[package]
name = "ccfetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmacchina = "7"
systemstat = "0.2.3"
x11rb = "0.12.0"
crossterm = "0.27.0"

[profile.release]
opt-level = 3
strip = true  # Automatically strip symbols from the binary.
lto = "fat"
panic = "abort"
codegen-units = 1

[build]
rustflags = ["-C", "target-cpu=native"]


