[package]
name = "ccfetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
rpm-pkg-count = { version = "0.2.1", features = ["runtime"] }


[profile.release]
opt-level = 3
strip = true  # Automatically strip symbols from the binary.
lto = "fat"
panic = "abort"
codegen-units = 1

[build]
rustflags = ["-C", "target-cpu=native"]
